Add InventoryResponseAssembler for HATEOAS model assembly; update InventoryController and tests accordingly
Co-authored-by: Copilot <copilot@github.com>